Adapt window sizing for HiDPI/small screens, fix run.bat
- MainWindow.createScene() now uses Screen.getPrimary().getVisualBounds()
  to compute adaptive initial and minimum window sizes instead of
  hardcoded 1480x920 initial / 1200x780 minimum. On a 1920x1080
  display at 150% scaling, this prevents the window from filling or
  overflowing the screen.

- Initial size: 90% of available area, capped at 1480x920
- Minimum size: 85% of available area, floored at 800x560
- Window is centred on screen after showing

- Removed hardcoded setMinWidth/setMinHeight from
  JlShellDesktopApplication.start() (now set in MainWindow)

- Fixed run.bat: always run 'mvn install' before 'javafx:run' so
  local SNAPSHOT dependencies are available; removed reference to
  missing settings-aliyun.xml

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>